force-app/main/default/objects/Student__c/fields/Attendence_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attendence_Percentage__c</fullName>
    <label>Attendence Percentage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>