force-app/main/default/objects/Student__c/fields/Low_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Low_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Attendance</label>
    <type>Checkbox</type>
</CustomField>