force-app/main/default/objects/Student__c/fields/Research_Topic__c.field-meta.xml
<CustomField>
    <fullName>Research_Topic__c</fullName>
    <label>Research Topic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>