force-app/main/default/objects/Student__c/validationRules/Student_Must_Be_At_Least_16.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Must_Be_At_Least_16</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(DOB__c),
    DOB__c &gt; ADDMONTHS(TODAY(), -192)
)</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Student must be at least 16 years old.</errorMessage>
</ValidationRule>